new classes: Status for simple user information about start, load and save activities. Vertaktoid - the main application class. it stores Context and makes it available for BindingUtils BindingUtils allows binding to the string resources
new features:
data binding: path, status, page number
status bar at the bottom of view
in time distributed storing of the application results in special temporary mei files
the mei zone tags will be enclosed in graphic tags by output

issues fixed:
MEI file not saved if only 1 image in folder - done
Crash while switching pages - done
Save opened image on exit - done
Allow to zoom further  - partially fixed by setting of static minimal dpi value in 40 (old value was 160)

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">Vertacktoid</string>
+    <string name="app_name">Vertaktoid</string>
+    <string name="status_success">Successful</string>
+    <string name="status_fail">Failure</string>
+    <string name="status_unknown">Unknown status</string>
+    <string name="action_start">Application Started</string>
+    <string name="action_save">Saved</string>
+    <string name="action_tmp_save">Temporary Saved</string>
+    <string name="action_load">Loaded</string>
+    <string name="action_unknown">Unknown action</string>
+    <string name="status_format">%1$s: %2$s at %3$s.</string>
+    <string name="status_date_format">hh:mm:ss</string>
 </resources>
