rounded corners as option bug with ghost pages fixed

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="dialog_settings_undosize_label">Max. size for undo/redo stack:</string>
     <string name="dialog_settings_percents">percents of page width</string>
     <string name="dialog_settings_points">points</string>
+    <string name="dialog_settings_corner_label">Corner type of measures:</string>
+    <string name="dialog_settings_corner_rounded">rounded</string>
+    <string name="dialog_settings_corner_straight">straight</string>
     <string name="dialog_editmo_titel">Set Movement Anchor</string>
     <string name="dialog_editmo_movement_label">Select existing movement or create new one:</string>
     <string name="dialog_editmo_spinner_optdef">create new</string>
@@ -20,6 +23,4 @@
     <string name="dialog_editme_titel">Edit Measure</string>
     <string name="dialog_editme_name_label">Measure name:</string>
     <string name="dialog_editme_rest_label">Rest bars:</string>
-
-
 </resources>
