--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
     <string name="dialog_editme_titel">Edit Measure</string>
     <string name="dialog_editme_name_label">Measure name:</string>
     <string name="dialog_editme_rest_label">Rest bars:</string>
-    <string name="dialog_settings_mei_label">MEI output type:</string>
-    <string name="dialog_settings_mei_canonical">canonical</string>
-    <string name="dialog_settings_mei_extended">extended</string>
-    <string name="dialog_settings_mei_polygonal">polygonal</string>
+    <string name="dialog_settings_mei_label">Type for next annotations:</string>
+    <string name="dialog_settings_mei_canonical">orthogonal box</string>
+    <string name="dialog_settings_mei_extended">oriented box</string>
+    <string name="dialog_settings_mei_polygonal">polygon</string>
 </resources>
